fix: 修正占卜狀態與每日資訊
